# confit

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  contributing.md  coverage.txt  mkdocs.yml  pyproject.toml  roadmap.md  versions.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: documentation.yml  prepare-release.yml  release.yml  test-build.yml  tests.yml
0.2.1/en/alternatives/: index.html
0.2.1/en/getting-started/: index.html
0.2.1/en/roadmap/: index.html
0.2.1/fr/: index.html
0.2.1/fr/contributing/: index.html
confit/: __init__.py  _version.py  autoreload.py  cli.py  config.py  draft.py  errors.py  registry.py  typing.py
confit/utils/: collections.py  eval.py  random.py  settings.py  xjson.py
demo/: config.cfg  config_add.cfg  script.py
docs/: alternatives.en.md  alternatives.fr.md  alternatives.md  getting-started.en.md  getting-started.fr.md  getting-started.md  index.en.md  index.fr.md  index.md
docs/scripts/: generate_reference.py
latest/: index.html
latest/alternatives/: index.html
latest/changelog/: index.html
latest/contributing/: index.html
latest/en/: index.html
latest/en/alternatives/: index.html
latest/en/changelog/: index.html
latest/en/contributing/: index.html
latest/en/getting-started/: index.html
latest/en/reference/: index.html
latest/en/roadmap/: index.html
latest/fr/: index.html
latest/fr/alternatives/: index.html
latest/fr/changelog/: index.html
latest/fr/contributing/: index.html
latest/fr/getting-started/: index.html
latest/fr/reference/: index.html
latest/fr/roadmap/: index.html
latest/getting-started/: index.html
latest/reference/: index.html
latest/reference/autoreload/: index.html
latest/reference/cli/: index.html
latest/reference/config/: index.html
latest/reference/confit/: index.html
latest/reference/errors/: index.html
latest/reference/registry/: index.html
latest/reference/utils/: index.html
latest/roadmap/: index.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/alternatives/: index.html
main/changelog/: index.html
main/contributing/: index.html
main/en/: index.html
main/en/alternatives/: index.html
main/en/changelog/: index.html
main/en/contributing/: index.html
main/en/getting-started/: index.html
main/en/reference/: index.html
main/en/roadmap/: index.html
main/fr/: index.html
main/fr/alternatives/: index.html
main/fr/changelog/: index.html
main/fr/contributing/: index.html
main/getting-started/: index.html
main/reference/: index.html
main/roadmap/: index.html
main/search/: search_index.json
scripts/: prepare_release.py
tests/: config-add.cfg  config.cfg  conftest.py  file_with_function.py  test_as_list.py  test_cli.py  test_config_instance.py  test_draft.py  test_enhance_decorator.py  test_registry.py  test_typing.py  test_utils.py  test_validate.py  test_version.py
tests/core/: test_config_instance.py
v0.10.0/: index.html  sitemap.xml
v0.10.0/alternatives/: index.html
v0.10.0/changelog/: index.html
v0.10.0/contributing/: index.html
v0.10.0/fr/: index.html
v0.10.0/getting-started/: index.html
v0.10.0/reference/: index.html
v0.10.0/roadmap/: index.html
v0.10.1/: objects.inv
v0.10.1/search/: search_index.json
v0.10.2/: 404.html  index.html
v0.10.2/alternatives/: index.html
v0.10.2/roadmap/: index.html
v0.11.0/: 404.html  objects.inv
v0.11.0/changelog/: index.html
v0.11.0/contributing/: index.html
v0.11.0/getting-started/: index.html
v0.11.0/reference/: index.html
v0.11.1/changelog/: index.html
v0.2.1/: 404.html  objects.inv
v0.2.1/contributing/: index.html
v0.2.1/search/: search_index.json
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/alternatives/: index.html
v0.3.0/changelog/: index.html
v0.3.0/fr/: index.html
v0.3.0/getting-started/: index.html
v0.4.0/: index.html
v0.4.0/contributing/: index.html
v0.4.0/getting-started/: index.html
v0.4.0/reference/: index.html
v0.4.0/roadmap/: index.html
v0.4.1/search/: search_index.json
v0.4.2/: sitemap.xml
v0.4.2/changelog/: index.html
v0.4.2/search/: search_index.json
v0.4.3/changelog/: index.html
v0.5.0/: objects.inv  sitemap.xml
v0.5.0/changelog/: index.html
v0.5.0/search/: search_index.json
v0.5.1/en/: index.html
v0.5.1/getting-started/: index.html
v0.5.1/roadmap/: index.html
v0.5.1/search/: search_index.json
v0.5.2/: sitemap.xml
v0.5.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.3/alternatives/: index.html
v0.5.3/changelog/: index.html
v0.5.3/contributing/: index.html
v0.5.3/getting-started/: index.html
v0.5.3/reference/: index.html
v0.5.3/roadmap/: index.html
v0.5.3/search/: search_index.json
v0.5.4/: index.html  sitemap.xml
v0.5.4/fr/: index.html
v0.5.5/alternatives/: index.html
v0.5.5/changelog/: index.html
v0.5.5/search/: search_index.json
v0.5.6/: index.html  objects.inv  sitemap.xml
v0.5.6/changelog/: index.html
v0.5.6/contributing/: index.html
v0.5.6/getting-started/: index.html
v0.5.6/reference/: index.html
v0.5.6/roadmap/: index.html
v0.5.6/search/: search_index.json
v0.6.0/: 404.html  objects.inv  sitemap.xml
v0.6.0/contributing/: index.html
v0.6.0/search/: search_index.json
v0.7.0/: sitemap.xml
v0.7.0/changelog/: index.html
v0.7.0/getting-started/: index.html
v0.7.0/search/: search_index.json
v0.7.1/: sitemap.xml
v0.7.1/alternatives/: index.html
v0.7.1/en/: index.html
v0.7.2/: index.html  sitemap.xml
v0.7.2/changelog/: index.html
v0.7.2/search/: search_index.json
v0.7.3/search/: search_index.json
v0.7.4/changelog/: index.html
v0.7.4/en/: index.html
v0.7.4/fr/: index.html
v0.7.4/getting-started/: index.html
v0.7.5/: sitemap.xml
v0.8.0/: index.html
v0.8.0/alternatives/: index.html
v0.8.0/changelog/: index.html
v0.8.0/contributing/: index.html
v0.8.0/reference/: index.html
v0.8.0/roadmap/: index.html
v0.9.0/: sitemap.xml
v0.9.0/changelog/: index.html
v0.9.0/search/: search_index.json
(+402 files in other folders)
