[tool.poetry]
name = "confit"
version = "0.1.4"
description = "Smart configuration framework"
authors = [
    "Perceval Wajsburt <perceval.wajsburt-ext@aphp.fr>",
    "Thomas Petit-Jean <thomas.petitjean@aphp.fr>",
    "Adam Remaki <adam.remaki@aphp.fr>",
    "Alice Calliger <alice.calliger@aphp.fr>"
]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
catalogue = "^2.0.7"
lark = "^1.1.5"
pydantic = "^1.2"
python = ">=3.7.1,<4.0"
srsly = "^2.4.4"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "22.6.0"
coverage = "^6.5"
flake8 = ">=3.0"
mike = "^1.1.2"
mkdocs = "^1.4"
mkdocs-autorefs = ">=0.4.1,<1.0.0"
mkdocs-bibtex = "^2.0.3"
mkdocs-glightbox = ">=0.1.6,<1.0.0"
mkdocs-material = "^8.2"
mkdocs-static-i18n = ">=0.53,<1.0.0"
mkdocstrings = ">=0.18.1,<1.0.0"
mkdocstrings-python = ">=0.6,<1.0.0"
mypy = ">=0.950,<1.0.0"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 8
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core", "cython", "setuptools<=63"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
