[project]
name = "confit"
description = "Smart configuration framework"
authors = [
    { name = "Perceval Wajsburt", email = "perceval.wajsburt@aphp.fr" },
    { name = "Thomas Petit-Jean", email = "thomas.petitjean@aphp.fr" },
    { name = "Adam Remaki", email = "adam.remaki@aphp.fr" },
    { name = "Alice Calliger", email = "alice.calliger@aphp.fr" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7.1,<4.0"
dynamic = ['version']
dependencies = [
    "catalogue>=2.0.7,<3.0",
    "lark>=1.1.5,<2.0",
    "pydantic>=1.2,<3.0",
    "typer>=0.6.1,<1.0",
    "pydantic-core>=0.20",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0,<8.0",
    "mike>=1.1.2,<2.0",
    "mkdocs>=1.4,<2.0",
    "mkdocs-autorefs>=0.4.1,<1.0.0",
    "mkdocs-bibtex>=2.0.3,<3.0",
    "mkdocs-glightbox>=0.1.6,<1.0.0",
    "mkdocs-material>=8.2,<9.0",
    "mkdocs-material-extensions>=1.1.1,<2.0.0",
    "mkdocs-static-i18n>=0.53,<1.0.0",
    "mkdocstrings>=0.18.1,<1.0.0",
    "mkdocstrings-python>=0.6,<2.0.0",
    "pre-commit>=2.18.1,<3.0",
    "pytest>=7.1.1,<8.0",
    "pytest-cov>=4.0.0,<5.0",
    "rich",
    "torch",
    "numpy",
]

[tool.setuptools.dynamic]
version = { attr = "confit.__version__" }

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 8
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
ignore-regex = ['__(?!init).*__']
color = true
omit-covered-files = false

[tool.coverage.report]
precision = 2
include = ["confit/*"]
omit = [
    "tests/*",
]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "@overload",
    "pragma: no cover",
    "raise .*Error",
    "raise .*Exception",
    "warn\\(",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
include = ["confit/*"]
concurrency = ["multiprocessing"]
parallel = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
]
ignore = []
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I001"
]
fixable = ["E", "F", "W", "I"]

[tool.ruff.isort]
known-first-party = ["confit"]
known-third-party = ["build"]

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
